Use unparker thread to remove latency from hot code